--- a/index.html
+++ b/index.html
@@ -563,14 +563,14 @@
                 </p>
             </div>
             <div class="footer-content-container footer-content__links">
-                <a href="#">
+                <a href="./policy.html">
                     Пользовательское соглашение
                 </a>
-                <a href="#">
-                    Политика конфиденциальности
+                <a href="./404.html">
+                    404
                 </a>
-                <a href="#">
-                    Отказ от ответственности
+                <a href="./about.html">
+                    О нас
                 </a>
             </div>
             <div class="footer-content-container footer-content__contacts">
